# django_project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  datadump.json  manage.py  pyproject.toml
blog_app/: admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py  0002_post_category_post_views_count.py  0003_alter_category_options_alter_post_options_and_more.py  0004_post_image.py  0005_enable_pg_trgm.py  0006_post_post_title_content_gin.py
blog_app/tests/: test_auth.py  test_categories.py  test_forms.py  test_models.py  test_views.py
blog_broject/: asgi.py  settings.py  urls.py  wsgi.py
drf_app/: api.py  permissions.py  serializers.py  urls.py
drf_app/tests/: test_PostViewSet.py
feedback_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
feedback_app/migrations/: 0001_initial.py  0002_feedback_subject.py
feedback_app/tests/: test_feedback.py
fixtures/: posts.json
ninja_app/: api.py  apps.py  schemas.py
static/css/: style.css
templates/: 403.html  404.html  base.html
templates/blog/: about.html  categories_list.html  category_create.html  category_detail.html  index.html  post_create.html  post_delete.html  post_detail.html  post_edit.html  posts_list.html
templates/feedback/: feedback.html  success.html
templates/includes/: pagination.html
templates/users/: login.html  password_change.html  password_change_done.html  password_reset_complete.html  (+7 more)
users_app/: apps.py  forms.py  models.py  profile_detail.html  signals.py  urls.py  views.py
(+8 files in other folders)
