[project]
name = "blog-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-filter>=25.2",
    "django-ninja>=1.6.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.2.0",
    "pre-commit>=4.6.0",
    "python-slugify>=8.0.4",
]
